# larpmanager

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ANALYSIS.md  BUGS_FOUND.md  CLAUDE.md  COMMERCIAL-LICENSE.txt  Dockerfile  Dockerfile.ci  LICENSE  PR_DESCRIPTION.md  PYTHON_FILE_SUMMARIES.md  README.md  REDIRECT_VULNERABILITIES_REPORT.md  REQUEST_CONTEXT_ANALYSIS.md  REQUEST_CONTEXT_QUICK_REFERENCE.md  SECURITY_AUDIT.md  SECURITY_AUDIT_EXTENDED.md  SECURITY_AUDIT_FINAL.md  conftest.py  docker-compose.yml  fix_copyright_headers.py  function_analysis.csv  function_analysis_report.txt  function_invocations.csv  improve_functions_claude.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/: CODEOWNERS
.github/workflows/: auto-approve.yml  pipeline.yml
data/: istat-codes.csv  istat-nations.csv
docs/: 01-features-and-permissions.md  02-roles-and-context.md  03-configuration-system.md  04-localization.md  05-playwright-testing.md  06-feature-description.md  06-feature-descriptions.md  07-directory-files-summary.md  08-security-best-practices.md
larpmanager/: __init__.py  apps.py
larpmanager/accounting/: __init__.py  balance.py  base.py  gateway.py  invoice.py  member.py  payment.py  registration.py  token_credit.py  vat.py
larpmanager/admin/: __init__.py  access.py  accounting.py  associations.py  base.py  casting.py  character.py  events.py  larpmanager.py  members.py  miscellanea.py  registrations.py  writing.py
larpmanager/cache/: ability.py  accounting.py  association.py  association_text.py  association_translation.py  bulk.py  button.py  character.py  config.py  dirty.py  event_text.py  experience.py  feature.py  fields.py  guides_tutorials.py  larpmanager.py  links.py  login.py  permission.py  px.py  question.py  registration.py  rels.py  role.py  run.py  skin.py  text_fields.py  warehouse.py  widget.py  writing.py  wwyltd.py
larpmanager/fixtures/: assoc_permission.yaml  association_permission.yaml  event_permission.yaml  feature.yaml  module.yaml  payment_methods.yaml  permission_module.yaml  skin.yaml  test.yaml
larpmanager/forms/: accounting.py  association.py  base.py  character.py  character_inventory.py  characterinventory.py  config.py  event.py  experience.py  feature.py  inventory.py  larpmanager.py  member.py  miscellanea.py  registration.py  transfer.py  utils.py  warehouse.py  widgets.py  writing.py
larpmanager/mail/: accounting.py  backends.py  base.py  digest.py  factory.py  member.py  registration.py  remind.py  templates.py
larpmanager/middleware/: association.py  base.py  broken.py  exception.py  locale.py  profiler.py  token.py  translation.py  url.py
larpmanager/migrations/: 0001_initial.py  0002_clean_character.py  0003_clean_features.py  0004_clean_features_writing.py  0005_rename_character_form_fields.py  0006_writinganswer_element_id.py  0007_remove_character_writing_fields.py  0008_writingquestion_applicable.py  0009_alter_writingquestion_applicable.py  0010_clean_features_registration_form.py  0011_alter_writingquestion_applicable_and_more.py  0012_alter_registrationticket_tier.py  0013_alter_character_preview_alter_character_teaser_and_more.py  0013_alter_registrationquestion_typ_and_more.py  0013_alter_writingoption_dependents.py  0014_clean_character_form.py  0015_alter_registrationquestion_typ_and_more.py  0016_alter_registrationquestion_status_and_more.py  0017_alter_faction_typ.py  0018_clean_features_fields.py  0019_remove_character_preview_remove_faction_preview_and_more.py  0020_clean_cocreation.py  0021_association_nationality_featuremodule_nationality.py  0022_alter_associationconfig_unique_together_and_more.py  0022_remove_registration_info.py  0023_remove_textversion_teaser.py  0024_alter_association_profile.py  0025_delete_larpmanagerhowto_remove_feature_link.py  0026_assocpermission_descr_eventpermission_descr.py  0027_alter_eventtext_typ.py  0027_feature_after_link_feature_after_text.py  0028_feature_after_link_feature_after_text.py  0029_alter_member_profile.py  0029_associationskin_association_skin.py  0030_alter_association_name_alter_association_slug_and_more.py  0031_alter_association_skin.py  0031_alter_association_skin_and_more.py  0032_alter_abilitypx_descr_alter_abilitypx_typ.py  0033_alter_accountingitemexpense_balance_and_more.py  0034_clean_features.py  (+202 more)
larpmanager/models/: access.py  accounting.py  association.py  base.py  casting.py  characterinventory.py  common.py  event.py  experience.py  form.py  inventory.py  larpmanager.py  member.py  miscellanea.py  notification.py  registration.py  signals.py  utils.py  writing.py
larpmanager/services/: ci_transfer.py
larpmanager/static/: package-lock.json  package.json
larpmanager/templates/: 403.html  404.html  500.html  alpha.html  base.html  llms.txt  main.html  robots.txt  structure.html  trans.html  utils.html  writing_list.html
larpmanager/templatetags/: show_tags.py
larpmanager/tests/: ability_px_test.py  conftest.py  exe_accounting_test.py  exe_assoc_role_test.py  exe_events_run_test.py  exe_features_all_test.py  exe_join_test.py  exe_membership_test.py  exe_profile_test.py  exe_template_copy_campaign_px_test.py  maiLgeneration_test.py  mail_generation_test.py  mirror_test.py  test_db.sql  (+37 more)
main/: urls.py
refactor/: .~lock.function_invocations_clean.csv#  .~lock.function_pydocs.csv#  analyze_functions.py  analyze_non_doc_changes.py  extract_functions.py  extract_pydocs.py  function_analysis.csv  function_analysis_old.csv  function_invocations.csv  function_invocations_guide.csv  function_pydocs.csv  function_rename.csv  improve_functions_claude.py  improve_functions_pydocs.py  improve_functions_rename.py  improve_functions_type_hints.py  missing_type_hints.csv  optimize_type_hints.py
scripts/: analyze_functions.py  build_ci_image.sh  check-ascii.sh  check-test-naming.sh  create_dbs.sh  default.conf  deploy.sh  entrypoint.sh  pip_upgrade.sh  prepare_trans.py  prevent-main-commit.sh  record-test.sh  test.sh  test_playwright.sh  test_unit.sh  translate.sh  update_trans.py  upgrade.sh  venv.sh
(+930 files in other folders)
