[project]
name = "larpmanager"
version = "1.0.0"
license = "AGPL-3.0-or-later"
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3"
]

[tool.djlint]
ignore="H006"
extend_exclude="static/,larpmanager/static/"

[tool.ruff]
line-length = 120
extend-exclude = ["main", "*/migrations/*", "*/tests/*"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
	"ISC001", # Implicit string concatenation, ignored to use ruff formatter
	"E501", # Line too long, ignored to use ruff formatter
	"D100", # Missing docstring in public module
	"D101", # Missing docstring in public class, to be removed later,
	"D104", # Missing docstring in public package
	"D105", # Missing docstring in magic method
	"D106", # Missing docstring in public nested class, would be useless on Meta
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
    "COM812",  # Trailing comma missing (conflicts with formatter)
    "TD002",   # Missing author in TODO
    "TD003",   # Missing issue link in TODO
    "FIX002",  # Line contains TODO
    "DJ001",  # TODO remove django-nullable-model-string-field
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8
