[project]
name = "larpmanager"
version = "1.0.0"
description = "A Django-based web application for managing LARP (Live Action Role-Playing) events"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}
authors = [
  {name = "Scanagatta Mauro"}
]
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Framework :: Django",
  "Framework :: Django :: 5.2",
]

dependencies = [
  "asgiref==3.10.0",
  "babel==2.17.0",
  "beautifulsoup4==4.14.2",
  "brotli==1.1.0",
  "calmjs.parse==1.3.3",
  "csscompressor==0.9.5",
  "deepl==1.23.0",
  "diff-match-patch==20241021",
  "django==5.2.7",
  "django-admin-autocomplete-filter==0.7.1",
  "django-allauth==65.13.0",
  "django-clone==5.5.0",
  "django-colorfield==0.14.0",
  "django-db-connection-pool==1.2.6",
  "django-import-export==4.3.13",
  "django-phonenumber-field==8.3.0",
  "django-postgrespool2==2.0.5",
  "django-ratelimit==4.1.0",
  "django-recaptcha==4.1.0",
  "django-redis==6.0.0",
  "django-select2==8.4.3",
  "django-silk==5.4.3",
  "django-simple-history==3.10.1",
  "django-tinymce==5.0.0",
  "django4-background-tasks==1.2.10",
  "django-compressor==4.5.1",
  "django-cors-headers==4.9.0",
  "django-debug-toolbar==6.1.0",
  "django-imagekit==6.0.0",
  "django-paypal==2.1",
  "django-registration==5.2.1",
  "django-request-profiler==1.1",
  "django-safedelete==1.4.1",
  "factory-boy==3.3.3",
  "gunicorn==23.0.0",
  "hiredis==3.3.0",
  "holidays==0.84",
  "html5lib==1.1",
  "humanize==4.14.0",
  "inflection==0.5.1",
  "jellyfish==1.2.1",
  "lxml==6.0.2",
  "olefile==0.47",
  "pandas==2.3.3",
  "pdfkit==1.0.0",
  "phonenumbers==9.0.17",
  "pilkit==3.0",
  "pillow==12.0.0",
  "playwright==1.55.0",
  "polib==1.2.0",
  "psycopg2-binary==2.9.11",
  "pycountry==24.6.1",
  "pyjwt==2.10.1",
  "pytest==8.4.2",
  "pytest-django==4.11.1",
  "pytest-factoryboy==2.8.1",
  "pytest-playwright==0.7.1",
  "pytest-rerunfailures==16.1",
  "pytest-timeout==2.4.0",
  "pytest-xdist==3.8.0",
  "python-dateutil==2.9.0.post0",
  "python-magic==0.4.27",
  "python-redsys==1.2.0",
  "python-slugify==8.0.4",
  "python3-openid==3.2.0",
  "python3-saml==1.16.0",
  "pytz==2025.2",
  "pyyaml==6.0.3",
  "requests==2.32.5",
  "requests-oauthlib==2.0.0",
  "ruff==0.14.3",
  "satispaython==0.4.0",
  "setuptools==80.9.0",
  "slugify==0.0.1",
  "stripe==13.1.1",
  "tzdata==2025.2",
  "whoosh==2.7.4",
  "xhtml2pdf==0.2.17",
  "boto3>=1.42.54",
]

[tool.djlint]
ignore="H006"
extend_exclude="static/,larpmanager/static/"

[tool.ruff]
line-length = 120
extend-exclude = ["main", "*/migrations/*", "*/tests/*", "scripts/*", "manage.py"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
	"ISC001", # Implicit string concatenation, ignored to use ruff formatter
	"E501", # Line too long, ignored to use ruff formatter
	"D100", # Missing docstring in public module
	"D104", # Missing docstring in public package
	"D106", # Missing docstring in public nested class, would be useless on Meta
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
    "COM812",  # Trailing comma missing (conflicts with formatter)
    "TD002",   # Missing author in TODO
    "TD003",   # Missing issue link in TODO
    "FIX002",  # Line contains TODO
    "DJ001",  # TODO remove django-nullable-model-string-field
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
